// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-caller-id-PUT calls getUser with correct args 1`] = `
[
  [
    {
      "body": "dummyEventBody",
    },
  ],
]
`;

exports[`api-caller-id-PUT calls putCallerId with correct args 1`] = `
[
  [
    {
      "callerId": "dummyEventBody",
      "user": {
        "email": "dummyEmail",
        "name": "dummyName",
        "sub": "dummySub",
      },
    },
  ],
]
`;

exports[`api-caller-id-PUT calls putCallerId with correct args when event body is missing 1`] = `
[
  [
    {
      "callerId": "",
      "user": {
        "email": "dummyEmail",
        "name": "dummyName",
        "sub": "dummySub",
      },
    },
  ],
]
`;

exports[`api-caller-id-PUT resolves with a correct value 1`] = `
{
  "body": "{"expiresTimestampSeconds":1234567890}",
  "statusCode": 200,
}
`;

exports[`api-caller-id-PUT resolves with a correct value when user is undefined 1`] = `
{
  "statusCode": 401,
}
`;
